# convo-explorer

./: .gitignore  README.md  pyproject.toml
.playwright-mcp/: page-2026-05-31T09-43-36-140Z.yml
src/agentconvos/: __init__.py  app.py  parser.py  summarize.py
src/cc_convo_explorer/: __init__.py  analyzer.py  app.py  parser.py  scanner.py  summarize.py
src/convo_explorer/: analyzer.py  app.py
