[project]
name = "cc-convo-explorer"
version = "0.1.0"
description = "TUI for browsing, searching, resuming, and analyzing Claude Code conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
]

[project.optional-dependencies]
ai = ["google-genai>=1.0"]

[project.scripts]
cc-convo-explorer = "cc_convo_explorer.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_convo_explorer"]
