[project]
name = "agentconvos"
version = "0.1.0"
description = "Discover, query, and browse AI coding agent conversations (Claude Code, Codex, Pi)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "textual>=3.0",
]

[project.optional-dependencies]
ai = ["google-genai>=1.0"]

[project.scripts]
agentconvos = "agentconvos.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentconvos"]
